src/objects/Errors_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Class__c</fullName>
        <label>Error Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Massage__c</fullName>
        <label>Error Massage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Method__c</fullName>
        <label>Error Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Errors Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_Massage__c</columns>
        <columns>Error_Class__c</columns>
        <columns>Error_Method__c</columns>
        <columns>Error_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERROR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>